--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "learning-back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "dev-app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dev-app.js"
+    "dev": "nodemon index.js"
   },
   "author": "Oleksii Martynenko",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "cors": "^2.8.5",
     "uuid": "^8.3.2"
